UNDONE: ICONS, renewbook CORS. Modified css styling.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             var content = loadContent(book_id, title, date);
             var bodyhtml = `
                 <div class="booking">
-                    <link rel="shortcut icon" type="image/x-icon" href="iconJournal.ico"/>
+                    <link rel="shortcut icon" type="image/x-icon" href="iconBook.ico"/>
                     ${content}
                 </div>
                 `;
@@ -127,7 +127,7 @@
             var content = loadContent(book_id, title, date);
             var bodyhtml = `
                 <div class="booking">
-                    <link rel="shortcut icon" type="image/x-icon" href="iconMagazine.ico"/>
+                    <link rel="shortcut icon" type="image/x-icon" href="iconGeneral.ico"/>
                     ${content}
                 </div>
                 `;
