fukin changes idk

--- a/test.html
+++ b/test.html
@@ -123,8 +123,8 @@
                 },
                 url: "https://europe-west2-bookit-297317.cloudfunctions.net/login",
                 data: JSON.stringify({
-                    username: 'user',
-                    password: 'password'
+                    username: 'plm',
+                    password: 'plm123'
                 }),
                 success: (response) => {
                     console.log("Login response:")
@@ -160,8 +160,8 @@
                 },
                 url: "https://europe-west2-bookit-297317.cloudfunctions.net/register",
                 data: JSON.stringify({
-                    username: 'user',
-                    password: 'password'
+                    username: 'plm',
+                    password: 'plm123'
                 }),
                 success: (response) => {
                     console.log("Register response:")
