--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
                     <i class="fas fa-search"></i>
                     <span>Search</span>
                 </li>
-            <li onclick='window.location.href="./search.html"'>
+            <li onclick='window.location.href="./bookings.html"'>
                 <i class="fas fa-calendar-alt"></i>
                     <span>Bookings</span>
                 </li>
@@ -38,8 +38,12 @@
             <div class="container text-center">
                 <div class="card">
                     <div class="card-header">
-                            <div class="mb-2">
-                                <input id="search-box" class="form-control form-control-sm w-25" type="text" placeholder="Search" aria-label="Search">
+                            <div class="mb-2 d-flex">
+                                <input id="search-box" class="form-control form-control-sm w-25 mr-2" type="text" placeholder="Search" aria-label="Search">
+                                <input type="button" class="btn btn-primary  ml-2" value="Advanced Search">
+                            </div>
+                            <div>
+                                
                             </div>
                     </div>
                     <div class="card-body">
@@ -53,10 +57,15 @@
                                 <th scope="col">Language</th>
                                 <th scope="col"></th>
                             </tr>
+                            
                             </thead>
                             <tbody id="tableBody">
+                                <tr>
+
+                                </tr>
                             </tbody>
                         </table>
+                        <div id="tableLoading" class="spinner-border"></div>
                     </div>
 
                 </div>
